--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_locations">Locations</string>
     <string name="title_trips">Trips</string>
     <string name="title_pictures">Pictures</string>
+    <string name="heading_past_trips">PAST TRIPS</string>
 </resources>
