--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">this is an activity</string>
     <string name="enter_trip_name_notification">Please enter the trip name</string>
     <string name="successfully_created_trip">Trip has been created successfully</string>
+    <string name="action_settings">Menu</string>
 </resources>
