--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="heading_past_trips">PAST TRIPS</string>
     <string name="enter_trip_name_notification">Please enter the trip name</string>
     <string name="successfully_created_trip">Trip has been created successfully</string>
+    <string name="hello_blank_fragment">Trip has been created successfully</string>
 </resources>
