Moved trips activity to fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="enter_trip_name_notification">Please enter the trip name</string>
     <string name="successfully_created_trip">Trip has been created successfully</string>
     <string name="hello_blank_fragment">Trip has been created successfully</string>
+    <string name="weather_temperature">%1$s°C</string>
+    <string-array name="trips_filter_array">
+        <item>A-Z</item>
+        <item>Z-A</item>
+        <item>Newest</item>
+        <item>Oldest</item>
+    </string-array>
+
 </resources>
