Update the location show activity and its layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="location">Location</string>
     <string name="latitude">Latitude:</string>
     <string name="longitude">Longitude:</string>
+    <string name="description">Description</string>
+    <string name="description_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="photos">Photos</string>
+    <string name="reviews">Reviews</string>
     <string-array name="trips_filter_array">
         <item>A-Z</item>
         <item>Z-A</item>
