--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="successfully_created_trip">Trip has been created successfully</string>
     <string name="hello_blank_fragment">Trip has been created successfully</string>
     <string name="weather_temperature">%1$s°C</string>
+    <string name="trips_filter_bar">Filters:</string>
+    <string name="photos_search_bar">Search Photos</string>
     <string-array name="trips_filter_array">
         <item>A-Z</item>
         <item>Z-A</item>
