Added photo detail and its related layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="weather_temperature">%1$s°C</string>
     <string name="trips_filter_bar">Filters:</string>
     <string name="photos_search_bar">Search Photos</string>
+    <string name="heading_photo">PHOTO</string>
     <string-array name="trips_filter_array">
         <item>A-Z</item>
         <item>Z-A</item>
