Changed 'pictures' to 'photos'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_home">Home</string>
     <string name="title_locations">Locations</string>
     <string name="title_trips">Trips</string>
-    <string name="title_pictures">Pictures</string>
+    <string name="title_photos">Photos</string>
     <string name="heading_past_trips">PAST TRIPS</string>
     <string name="heading_locations">LOCATIONS</string>
     <string name="heading_photos">PHOTOS</string>
