extracting the string for the location_see_review_activity.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="trips_filter_bar">Filters:</string>
     <string name="photos_search_bar">Search Photos</string>
     <string name="heading_photo">PHOTO</string>
+    <string name="reviews">Reviews</string>
     <string-array name="trips_filter_array">
         <item>A-Z</item>
         <item>Z-A</item>
