Changed the displayed name from filter to sort

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="description_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
     <string name="photos">Photos</string>
     <string name="reviews">Reviews</string>
-    <string name="trips_filter_bar">Filters:</string>
+    <string name="filter_bar">Sort:</string>
     <string name="photos_search_bar">Search Photos</string>
     <string name="heading_photo">PHOTO</string>
     <string name="heading_reviews">REVIEWS</string>
