--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="map_dialog_approve">"Finish trip"</string>
     <string name="home_fragment_title">Provide the trip title</string>
     <string name="start_trip_no_location_enabled">Please enable the location</string>
+    <string name="heading_location">LOCATION</string>
     <string-array name="sort_array">
         <item>A-Z</item>
         <item>Z-A</item>
