--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="home_fragment_title">Provide the trip title</string>
     <string name="start_trip_no_location_enabled">Please enable the location</string>
     <string name="heading_location">LOCATION</string>
+    <string name="map_finish_trip">END TRIP</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
     <string-array name="sort_array">
         <item>A-Z</item>
         <item>Z-A</item>
