Added string references and base textcolor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="map_finish_trip">END TRIP</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="cancel">CANCEL</string>
+    <string name="save">SAVE</string>
     <string-array name="sort_array">
         <item>A-Z</item>
         <item>Z-A</item>
