--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="no_photos">No photos yet…</string>
     <string name="no_trips">No trips yet…</string>
     <string name="no_locations">No locations yet…</string>
+    <string name="no_reviews">No reviews yet…</string>
     <string-array name="sort_array">
         <item>A-Z</item>
         <item>Z-A</item>
