--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="rating">Rating :</string>
     <string name="_3_5">3 / 5</string>
     <string name="add_review">Add a review (%1$s)</string>
+    <string name="add">Add</string>
     <string-array name="sort_array">
         <item>A-Z</item>
         <item>Z-A</item>
