--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="add_a_photo">Upload a photo</string>
     <string name="title_of_review">Title Of Review</string>
     <string name="rating">Rating :</string>
-    <string name="_3_5">3 / 5</string>
+    <string name="out_of_5">/ 5</string>
     <string name="add_review">Add a review (%1$s)</string>
     <string name="add">Add</string>
     <string-array name="sort_array">
