Added dates to the locations, removed default trip's description (since it does not exist anymore)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="out_of_5">/ 5</string>
     <string name="add_review">Add a review (%1$s)</string>
     <string name="add">Add</string>
+    <string name="num_of_locations">Number of locations</string>
     <string-array name="sort_array">
         <item>A-Z</item>
         <item>Z-A</item>
